@@ -1,18 +1,12 @@
 
 TODO 8.2.0:
 
-    upgrade to mongoid 3.0.x
-
-    upgrade mongodb 2.0.7
-
     migrate old data to keyword (indexer)
 
     worker:
         when worker start, print the recovery activity
         worker does not recover when running
         create index on grid.evidence.files  metadata.shard
-
-    check backup for operation or target
 
     check public document deletion
 
@@ -28,6 +22,11 @@ TODO 8.2.0:
 
     smtp auth for alerts
 
+
+    upgrade to mongoid 3.0.x
+
+    upgrade mongodb 2.0.7
+
     ocr for images
         - separate installer
         - separate process
@@ -38,6 +37,9 @@ TODO 8.2.0:
     policies?
 
     chat peer not as string but array
+
+
+TODO FUTURE:
 
     correlation:
         target records (schedario)
