@@ -13,3 +13,4 @@ DB:
     - more accurate evidence size recalculation for targets and operations
     - the metadata backup is now created automatically if not present
     - new operations, targets and factory are displayed to other users upon refresh
+    - fix for operation and target backup not performing correctly
